--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/composter_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Composter - Your Personal Vault for React Components</title>
+    <title>Composter</title>
   </head>
   <body>
     <div id="root"></div>
